[package]
name = "constant-size-dfs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.constant-size-dfs]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "array_tree_reiter"
path = "fuzz_targets/array_tree_reiter.rs"
test = false
doc = false

[[bin]]
name = "array_tree_halt"
path = "fuzz_targets/array_tree_halt.rs"
test = false
doc = false
